<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateRoomActivity"
    tools:showIn="@layout/activity_create_room">

    <TextView
        android:layout_marginTop="@dimen/standard_23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/navn_p_rom" />

    <EditText
        android:id="@+id/create_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/pi256"
        android:backgroundTint="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/beskrivelse" />

    <EditText
        android:id="@+id/create_room_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/forelesningssal_med_200_plasser"
        android:backgroundTint="@color/colorPrimary" />

</LinearLayout>
