<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:id="@+id/maps_container">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" />

    <View
        android:id="@+id/fabBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/fabLayout1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:padding="@dimen/standard_12"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/standard_23"
        android:layout_gravity="bottom|end"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fra_kart"
            android:textColor="@color/colorPrimary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_add_location_white_24dp"
            app:fabSize="mini" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fabLayout2"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:padding="@dimen/standard_12"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/standard_23"
        android:layout_gravity="bottom|end"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fra_gps"
            android:textColor="@color/colorPrimary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_gps_fixed_white_24dp"
            app:fabSize="mini" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fabLayout3"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:padding="@dimen/standard_12"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/standard_23"
        android:layout_gravity="bottom|end"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fra_addresse"
            android:textColor="@color/colorPrimary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_domain_white_24dp"
            app:fabSize="mini" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:src="@drawable/ic_add_circle_outline_white_24dp"
        app:icon="@drawable/ic_add_circle_outline_white_24dp"
        app:fabSize="normal"
        android:text="@string/opprett_nytt_rom"
        android:layout_marginStart="@dimen/standard_23"
        android:layout_marginEnd="@dimen/standard_23"
        android:layout_marginBottom="@dimen/fab_margin" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
